create github pages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/nola-concrete-pumping-rentals-louisiana.png" type="image/x-icon">
-  <meta name="description" content="DACP Construction LLC is a licensed company that specializes in Commercial and Residential Concrete, Masonry and Stucco with experience in schools, stores, building, parking lots, homes and more.">
+  <meta name="description" content="NOLA Concrete Pumping of Louisiana was founded in 2018, and has been recognized as one of the states’ leaders in the concrete pumping industry.">
   
-  <title>DACP Construction LLC | Concrete | Stucco | Masonry | Louisiana | General Concrete & Masonry Contractor in Paradis</title>
+  <title>NOLA Concrete Pumping LLC | Concrete Pumping Services Louisiana | Line Pumping Rentals | Driveways | Footings | Foundations | Highways | Parking Lots | Sidewalks | Structural</title>
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -66,8 +66,8 @@
                     <h2 class="link title align-center mbr-black mbr-bold mbr-fonts-style display-5">CONCRETE PUMPING</h2>
                     
                     
-                    <img class="img1" src="assets/images/whatsapp-image-2020-05-27-at-4.08.54-pm-1218x685.jpg" alt="" title="">
-                    <img class="img2" src="assets/images/nola-logo-800x800.png" alt="Concrete Pumping Services Louisiana" title="Concrete Pumping Services Louisiana">
+                    <img class="img1" src="assets/images/whatsapp-image-2020-06-03-at-3.59.34-pm.jpeg" alt="" title="">
+                    <img class="img2" src="assets/images/nola-concrete-pumping-rentals-louisiana-1.png" alt="Concrete Pumping Services Louisiana" title="Concrete Pumping Services Louisiana">
                 </div>
             </div>
         </div>
@@ -294,7 +294,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="85" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4800.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="85" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4801.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
@@ -319,7 +319,7 @@
         <div class="row justify-content-center mbr-white">
             <div class="col-md-6 first-column">
                 <h2 class="mbr-section-title mbr-fonts-style pb-2 display-5">
-                    NOLA CONCRETE PUMPING LLC</h2>
+                    NOLA Concrete Pumping LLC</h2>
                 <h3 class="mbr-section-subtitle mbr-fonts-style mbr-lighter display-4">
                     CALL US AT:</h3>
                 <p class="mbr-text mbr-fonts-style display-4">
@@ -374,7 +374,7 @@
         <div class="row">
             <div class="col-12 align-self-center">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2020 DACP Construction LLC - All Rights Reserved • <a href="privacy.html" target="_blank" class="text-danger">Privacy Policy</a>&nbsp;• <a href="terms.html" target="_blank" class="text-danger">Terms &amp; Conditions</a></p>
+                    © Copyright 2020 NOLA Concrete Pumping LLC - All Rights Reserved • <a href="privacy.html" target="_blank" class="text-danger">Privacy Policy</a>&nbsp;• <a href="terms.html" target="_blank" class="text-danger">Terms &amp; Conditions</a></p>
             </div>
         </div>
     </div>
