--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-5 p-0">
                 <div class="wrap h-100">
-                    <img src="assets/images/nola-fb-page-cover.jpg" alt="Structural Concrete" class="mw-100 h-100" title="Structural Concrete">
+                    <img src="assets/images/nola-fb-page-cover.jpeg" alt="Concrete Pumping Rentals Louisiana" class="mw-100 h-100" title="Concrete Pumping Rentals Louisiana">
                 </div>
             </div>
             <div class="col-lg-7 col-md-12 right d-flex">
@@ -294,7 +294,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="85" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4803.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="85" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4804.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
