create github pages

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             </div>
             <div class="col-lg-7">
                 <div class="wrapper">
-                    <h2 class="link title align-center mbr-black mbr-bold mbr-fonts-style display-5">CONCRETE PUMPING</h2>
-                    
-                    
+                    <h2 class="link title align-center mbr-black mbr-bold mbr-fonts-style display-5">&nbsp;RENTALS</h2>
+                    <a href="https://nola-concrete-pumping-llc.business.site/" target="_blank"><span class="icon1 mbr-iconfont socicon-google socicon"></span></a>
+                    <a href="https://www.instagram.com/nola_concrete_pumping/" target="_blank"><span class="icon2 mbr-iconfont socicon-instagram socicon"></span></a>
                     <img class="img1" src="assets/images/whatsapp-image-2020-06-03-at-3.59.34-pm.jpeg" alt="" title="">
                     <img class="img2" src="assets/images/nola-concrete-pumping-rentals-louisiana-1.png" alt="Concrete Pumping Services Louisiana" title="Concrete Pumping Services Louisiana">
                 </div>
@@ -244,7 +244,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
@@ -294,7 +294,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="85" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4804.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="85" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4805.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
