--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 </section>
 
-<section class="accordion2 cid-s1s54osxVB" id="accordion02-17">
+<section class="accordion2 cid-s1uUbTr2Ih" id="accordion02-1c">
 
     
 
@@ -120,46 +120,45 @@
 
 
             <div class="col-lg-6">
-                <img src="assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x480.jpg" alt="" title="">
+                <img src="assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x480.jpg" alt="NOLA Concrete Pumping Rentals Louisiana" title="NOLA Concrete Pumping Rentals Louisiana">
 
-                <div id="bootstrap-accordion_12" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_8" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_12" aria-expanded="false" aria-controls="collapse1">
-                                <h4 class="mbr-fonts-style display-5">Truck-Mounted Boom Pumps
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_8" aria-expanded="false" aria-controls="collapse1">
+                                <h4 class="mbr-fonts-style display-5">TRUCK-MOUNTED BOOM PUMPS &nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </h4>
                             </a>
                         </div>
-                        <div id="collapse1_12" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_12">
+                        <div id="collapse1_8" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_8">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                    We&nbsp;offer truck mounted boom pumps in a variety of sizes to suit your placement needs. We offer booms from 32 to 65 meters in length, pump speeds from 0 to 300 cubic yards per hour and mix capabilities from wall mix to DOT bridge mixes.</p>
+                                    We offer truck mounted boom pumps in a variety of sizes to suit your placement needs. We offer booms from 32 to 65 meters in length, pump speeds from 0 to 300 cubic yards per hour and mix capabilities from wall mix to DOT bridge mixes.o.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_12" aria-expanded="false" aria-controls="collapse2">
-                                <h4 class="mbr-fonts-style display-5">Separate Placing Booms &nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_8" aria-expanded="false" aria-controls="collapse2">
+                                <h4 class="mbr-fonts-style display-5">SEPARATE PLACING BOOMS&nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </h4>
                             </a>
 
                         </div>
-                        <div id="collapse2_12" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_12">
+                        <div id="collapse2_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_8">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">
-                                    Pioneer offers separate placing equipment for any type of application.   Our systems include deck placers, separate placing booms with towers and pedestals, high pressure line pumps.</p>
+                                <p class="mbr-fonts-style panel-text display-7">We have available separate placing equipment for any type of application. Our systems include deck placers, separate placing booms with towers and pedestals, high pressure line pumps.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_12" aria-expanded="false" aria-controls="collapse3">
-                                <h4 class="mbr-fonts-style display-5">Cost effective placement Line Pumps&nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_8" aria-expanded="false" aria-controls="collapse3">
+                                <h4 class="mbr-fonts-style display-5">COST EFFECTIVE LINE PUMPS&nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </h4>
                             </a>
                         </div>
-                        <div id="collapse3_12" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_12">
+                        <div id="collapse3_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_8">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">In many ways line pumps are the most versatile type of concrete pump in use. Small lines allow block fill, footing and other small jobs to be performed with a minimum of labor and cleanup. Smaller walls, mezzanines and other inside elevated work can be done easily.</p>
                             </div>
@@ -198,15 +197,15 @@
                 <h3 class="mbr-section-subtitle mbr-bold align-left mbr-black mbr-light pb-3 mbr-fonts-style display-2">Concrete Pumping Services</h3>
                 <p class="mbr-text align-left mbr-fonts-style display-7">Over the years, we have pumped concrete with wide variety of mixes on various projects including mat pours, high rise buildings, highway bridges, power plants, and underwater footers.&nbsp;<br></p>
 
-                <div id="bootstrap-accordion_13" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_3" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_13" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_3" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-2"><strong>Concrete Pumping Rentals</strong><div>&nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </div></h4>
                             </a>
                         </div>
-                        <div id="collapse1_13" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_13">
+                        <div id="collapse1_3" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_3">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">Driveways<br>Footings<br>Foundations<br>Highways<br>Parking lots<br>Sidewalks<br>Structural.</p>
                             </div>
@@ -214,13 +213,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_13" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_3" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-2"><strong>Service Areas &nbsp;</strong><span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </h4>
                             </a>
 
                         </div>
-                        <div id="collapse2_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_13">
+                        <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_3">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">Louisiana, USA<br>Lacombe, LA 70445, USA<br>Mandeville, LA, USA<br>New Orleans, LA, USA<br>Madisonville, LA 70447, USA<br>Walker, LA, USA<br>Goodbee, LA 70433, USA<br>Denham Springs, LA, USA<br>Covington, LA, USA<br>Gramercy, LA 70052, USA<br>Louisiana, USA<br>Metairie, LA, USA<br>Albany, LA 70711, USA<br>Baton Rouge, LA, USA<br>Hammond, LA, USA<br>Livingston, LA 70754, USA<br>Gretna, LA, USA<br>Slidell, LA, USA</p>
                             </div>
@@ -294,7 +293,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="85" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4805.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="15" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4800.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
