--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="col-lg-7 col-md-12 right d-flex">
                 <div class="col-md-8 text m-auto">
                     <div class="wrap pt-5 pb-5">
-                        <h1 class="mbr-section-title mbr-white align-left mbr-regular mbr-fonts-style mb-5 display-7">NOLA Concrete Pumping was founded in 2018, and has been recognized as one of the states’ leaders in the concrete pumping industry.<div><br></div><div>NOLA Concrete Pumping provides customers with the most experienced operators in the industry and safe, well-maintained equipment. We are also proud of our long list of satisfied customers.</div></h1>
+                        <h1 class="mbr-section-title mbr-white align-left mbr-regular mbr-fonts-style mb-5 display-7">NOLA Concrete Pumping was founded in 2018, and has been recognized as one of the states’ leaders in the concrete pumping industry.</h1>
                         <div class="link-wrap">
                             <div class="mbr-section-btn mbr-fonts-style"><a class="mbr-section-subtitle text-white mbr-light pb-3 mbr-fonts-style d-inline-block display-7" href="tel:+1-985-308-0141">
                                     CALL US (985) 308-0141</a></div>
@@ -122,15 +122,15 @@
             <div class="col-lg-6">
                 <img src="assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x480.jpg" alt="NOLA Concrete Pumping Rentals Louisiana" title="NOLA Concrete Pumping Rentals Louisiana">
 
-                <div id="bootstrap-accordion_8" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_2" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_8" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_2" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-5">TRUCK-MOUNTED BOOM PUMPS &nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </h4>
                             </a>
                         </div>
-                        <div id="collapse1_8" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_8">
+                        <div id="collapse1_2" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_2">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                     We offer truck mounted boom pumps in a variety of sizes to suit your placement needs. We offer booms from 32 to 65 meters in length, pump speeds from 0 to 300 cubic yards per hour and mix capabilities from wall mix to DOT bridge mixes.o.</p>
@@ -139,13 +139,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_8" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_2" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-5">SEPARATE PLACING BOOMS&nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </h4>
                             </a>
 
                         </div>
-                        <div id="collapse2_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_8">
+                        <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_2">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">We have available separate placing equipment for any type of application. Our systems include deck placers, separate placing booms with towers and pedestals, high pressure line pumps.</p>
                             </div>
@@ -153,12 +153,12 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_8" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_2" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-5">COST EFFECTIVE LINE PUMPS&nbsp;<span class="sign mbr-iconfont mbri-arrow-down inactive"><br></span>
                                 </h4>
                             </a>
                         </div>
-                        <div id="collapse3_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_8">
+                        <div id="collapse3_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_2">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">In many ways line pumps are the most versatile type of concrete pump in use. Small lines allow block fill, footing and other small jobs to be performed with a minimum of labor and cleanup. Smaller walls, mezzanines and other inside elevated work can be done easily.</p>
                             </div>
@@ -243,7 +243,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
