--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         </div>
                         <div id="collapse1_3" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_3">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">Driveways<br>Footings<br>Foundations<br>Highways<br>Parking lots<br>Sidewalks<br>Structural.</p>
+                                <p class="mbr-fonts-style panel-text display-7">Driveways<br>Footings<br>Foundations<br>Highways<br>Parking lots<br>Sidewalks<br>Structural</p>
                             </div>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
@@ -270,7 +270,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="83" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4802.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="83" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4803.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
