--- a/privacy.html
+++ b/privacy.html
@@ -137,7 +137,7 @@
                 <div class="icons-wrapper">
                     <ul>
                         <li>
-                            <a class="icon-transition" href="https://www.facebook.com/pg/nolapump" target="_blank">
+                            <a class="icon-transition" href="https://www.facebook.com/nolaconcretepumping/" target="_blank">
                                 <span class="mbr-iconfont socicon-facebook socicon"></span>
                             </a>
                         </li>
