--- a/terms.html
+++ b/terms.html
@@ -217,7 +217,7 @@ You hereby agree to the use of electronic signatures, contracts, orders and othe
                 <div class="icons-wrapper">
                     <ul>
                         <li>
-                            <a class="icon-transition" href="https://www.facebook.com/pg/nolapump" target="_blank">
+                            <a class="icon-transition" href="https://www.facebook.com/nolaconcretepumping/" target="_blank">
                                 <span class="mbr-iconfont socicon-facebook socicon"></span>
                             </a>
                         </li>
