--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div id="collapse1_2" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_2">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                    We offer truck mounted boom pumps in a variety of sizes to suit your placement needs. We offer booms from 20 to 40 meters in length, pump speeds from 0 to 300 cubic yards per hour and mix capabilities from wall mix to DOT bridge mixes.o.</p>
+                                    We offer truck mounted boom pumps in a variety of sizes to suit your placement needs. We offer booms from 20 to 40 meters in length, pump speeds from 0 to 300 cubic yards per hour and mix capabilities from wall mix to DOT bridge mixes.</p>
                             </div>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                         </div>
                         <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_2">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">In many ways line pumps are the most versatile type of concrete pump in use. Small lines allow block fill, footing and other small jobs to be performed with a minimum of labor and cleanup. Smaller walls, mezzanines and other inside elevated work can be done easily.</p>
+                                <p class="mbr-fonts-style panel-text display-7">In many ways line pumps are the most versatile type of concrete pump in use. Small lines allow block fill, footing and other small jobs to be performed with a minimum of labor and cleanup. Smaller walls, backyards, pool decks, patios, mezzanines and other inside elevated work can be done easily.</p>
                             </div>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="173" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4803.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="173" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4804.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
