--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-lg-6 md-pb m-auto">
                 <div class="content">
                     <h1 class="mbr-section-title align-left mbr-bold mbr-white pb-4 mbr-fonts-style display-1">NOLA Concrete Pumping Rentals</h1>
-                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">Lower hourly costs<div>High speed placement capabilities</div><div>Set up virtually anywhere</div><div>Long distance capability</div><div>Fast setup, moving and cleanup time</div><div>Tough mix pumping ability – bridge decks to house slabs</div></h2>
+                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">Lower hourly costs<div>High speed placement capabilities</div><div>Set up virtually anywhere</div><div>Long distance capability</div><div>Fast setup, moving and cleanup time</div><div>Tough mix pumping ability – bridge decks to house slabs</div><div>Access capability to restricted spaces</div></h2>
                 </div>
             </div>
 
@@ -258,7 +258,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="173" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4804.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="173" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4805.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
