create github pages

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="col-lg-7 col-md-12 right d-flex">
                 <div class="col-md-8 text m-auto">
                     <div class="wrap pt-5 pb-5">
-                        <h1 class="mbr-section-title mbr-white align-left mbr-regular mbr-fonts-style mb-5 display-7">NOLA Concrete Pumping was founded in 2018, and has been recognized as one of the states’ leaders in the concrete pumping industry.</h1>
+                        <h1 class="mbr-section-title mbr-white align-left mbr-regular mbr-fonts-style mb-5 display-7">NOLA Concrete Pumping was founded in 2018, and has been recognized as one of the state's leaders in the concrete pumping industry.</h1>
                         <div class="link-wrap">
                             <div class="mbr-section-btn mbr-fonts-style"><a class="mbr-section-subtitle text-white mbr-light pb-3 mbr-fonts-style d-inline-block display-7" href="tel:+1-985-308-0141">
                                     CALL US (985) 308-0141</a></div>
@@ -258,7 +258,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="173" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4805.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="173" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4806.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
