--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a href="https://nola-concrete-pumping-llc.business.site/" target="_blank"><span class="icon1 mbr-iconfont socicon-google socicon"></span></a>
                     <a href="https://www.instagram.com/nola_concrete_pumping/" target="_blank"><span class="icon2 mbr-iconfont socicon-instagram socicon"></span></a>
                     <img class="img1" src="assets/images/whatsapp-image-2020-06-03-at-3.59.34-pm.jpeg" alt="" title="">
-                    <img class="img2" src="assets/images/nola-logo-clear.png" alt="Concrete Pumping Services Louisiana" title="Concrete Pumping Services Louisiana">
+                    <img class="img2" src="assets/images/nola-concrete-pumping-rentals-louisiana-1.png" alt="Concrete Pumping Services Louisiana" title="Concrete Pumping Services Louisiana">
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-5 p-0">
                 <div class="wrap h-100">
-                    <img src="assets/images/img-2457.jpeg" alt="Concrete Pumping Rentals Louisiana" class="mw-100 h-100" title="Concrete Pumping Rentals Louisiana">
+                    <img src="assets/images/nola-fb-page-cover.jpeg" alt="Concrete Pumping Rentals Louisiana" class="mw-100 h-100" title="Concrete Pumping Rentals Louisiana">
                 </div>
             </div>
             <div class="col-lg-7 col-md-12 right d-flex">
@@ -231,7 +231,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
@@ -242,7 +242,7 @@
                     </div>
                     <div class="mbr-section-text">
                         <p class="mbr-text pt-3 mbr-light mbr-fonts-style display-7"><strong>
-                            Business Hours:&nbsp;<br></strong>Monday-Saturday 8:00 AM – 4:00 PM</p>
+                            Business Hours:&nbsp;</strong>M-F 8:00 AM – 4:00 PM</p>
                     </div>
                     <div class="mbr-list  mbr-fonts-style display-7">
                         <ul class="mbr-list mbr-fonts-style">
@@ -258,7 +258,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="376" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x4809.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="557" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x48010.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
