--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
@@ -242,7 +242,7 @@
                     </div>
                     <div class="mbr-section-text">
                         <p class="mbr-text pt-3 mbr-light mbr-fonts-style display-7"><strong>
-                            Business Hours:&nbsp;</strong>M-F 8:00 AM – 4:00 PM</p>
+                            Business Hours:</strong><strong><br></strong>Monday - Saturday 8:00 AM – 4:00 PM</p>
                     </div>
                     <div class="mbr-list  mbr-fonts-style display-7">
                         <ul class="mbr-list mbr-fonts-style">
