create github pages

--- a/index.html
+++ b/index.html
@@ -113,12 +113,10 @@
             <div class="col-lg-6 md-pb m-auto">
                 <div class="content">
                     <h1 class="mbr-section-title align-left mbr-bold mbr-white pb-4 mbr-fonts-style display-1">NOLA Concrete Pumping Rentals</h1>
-                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">Lower hourly costs<div>High speed placement capabilities</div><div>Set up virtually anywhere</div><div>Long distance capability</div><div>Fast setup, moving and cleanup time</div><div>Tough mix pumping ability – bridge decks to house slabs</div><div>Access capability to restricted spaces</div></h2>
+                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">Lower hourly costs<div>High speed placement capabilities</div><div>Set up virtually anywhere</div><div>Long distance capability</div><div>Fast setup, moving and cleanup time</div><div>Tough mix pumping ability – bridge decks to house slabs</div><div>Access capability to restricted spaces.</div></h2>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-info display-4" href="tel:+1-985-308-0141">CALL (985) 308-0141</a> <a class="btn btn-lg btn-primary display-4" href="https://go.oncehub.com/NOLAConcretePumping" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;BOOK NOW &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
                 </div>
             </div>
-
-
-
             <div class="col-lg-6">
                 <img src="assets/images/whatsapp-image-2020-06-13-at-11.13.29-am.jpeg" alt="NOLA Concrete Pumping Rentals Louisiana" title="NOLA Concrete Pumping Rentals Louisiana">
 
@@ -220,18 +218,6 @@
                 </div>
             </div>
         </div>
-    </div>
-</section>
-
-<section class="mbr-section content2 cid-s2orbWhqSL" id="content2-1i">
-
-    
-
-    <div class="container">
-<!-- ScheduleOnce embed START -->
-<div id="SOIDIV_NOLAConcretrePumping" data-so-page="NOLAConcretrePumping" data-height="550" data-style="border: 1px solid #d8d8d8; min-width: 290px; max-width: 900px;" data-psz="00"></div>
-<script type="text/javascript" src="https://cdn.oncehub.com/mergedjs/so.js"></script>
-<!-- ScheduleOnce embed END -->
     </div>
 </section>
 
