create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h1 class="mbr-section-title align-left mbr-bold pb-4 mbr-fonts-style display-1">NOLA<br>Concrete Pumping</h1>
 
                 <p class="mbr-text pb-4 align-left mbr-fonts-style display-5">
-                    NOLA Concrete Pumping provides customers with the most experienced operators in the industry and safe, well-maintained equipment. We are also proud of our long list of satisfied customers</p>
+                    NOLA Concrete Pumping provides customers with the most experienced operators in the industry and safe, well-maintained equipment. We are also proud of our long list of satisfied customers.</p>
                 <div class="mbr-section-btn"><a class="btn btn-lg btn-info display-4" href="tel:+1-985-308-0141">CALL (985) 308-0141</a> <a class="btn btn-lg btn-primary display-4" href="https://go.oncehub.com/NOLAConcretePumping" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;BOOK NOW &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
             </div>
             <div class="col-lg-7">
@@ -68,34 +68,6 @@
                     <a href="https://www.instagram.com/nola_concrete_pumping/" target="_blank"><span class="icon2 mbr-iconfont socicon-instagram socicon"></span></a>
                     <img class="img1" src="assets/images/nola-concrete-pump-rentals.jpeg" alt="Nola Concrete Pumping Louisiana" title="Nola Concrete Pumping Louisiana">
                     <img class="img2" src="assets/images/nola-concrete-pumping-rentals-louisiana-1.png" alt="Concrete Pumping Services Louisiana" title="Concrete Pumping Services Louisiana">
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="header1 cid-s0MFvWbG0g" id="header01-5">
-
-    
-
-    
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12 col-lg-5 p-0">
-                <div class="wrap h-100">
-                    <img src="assets/images/whatsapp-image-2020-06-13-at-11.13.29-am-1.jpeg" alt="Concrete Pumping Rentals Louisiana" class="mw-100 h-100" title="Concrete Pumping Rentals Louisiana">
-                </div>
-            </div>
-            <div class="col-lg-7 col-md-12 right d-flex">
-                <div class="col-md-8 text m-auto">
-                    <div class="wrap pt-5 pb-5">
-                        <h1 class="mbr-section-title mbr-white align-left mbr-regular mbr-fonts-style mb-5 display-7">NOLA Concrete Pumping was founded in 2018, and has been recognized as one of the state's leaders in the concrete pumping industry.</h1>
-                        <div class="link-wrap">
-                            <div class="mbr-section-btn mbr-fonts-style"><a class="mbr-section-subtitle text-white mbr-light pb-3 mbr-fonts-style d-inline-block display-7" href="tel:+1-985-308-0141">
-                                    CALL US (985) 308-0141</a></div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -177,8 +149,8 @@
 
 
             <div class="col-lg-6">
-                <h3 class="mbr-section-subtitle mbr-bold align-left mbr-black mbr-light pb-3 mbr-fonts-style display-2"></h3>
-                <p class="mbr-text align-left pb-4 mbr-fonts-style display-7"></p>
+                <h3 class="mbr-section-subtitle mbr-bold align-left mbr-black mbr-light pb-3 mbr-fonts-style display-2">About Us</h3>
+                <p class="mbr-text align-left pb-4 mbr-fonts-style display-7">NOLA Concrete Pumping was founded in 2018, and has been recognized as one of the state's leaders in the concrete pumping industry.</p>
 
                 <h3 class="mbr-section-subtitle mbr-bold align-left mbr-black mbr-light pb-3 mbr-fonts-style display-2">Concrete Pumping Services</h3>
                 <p class="mbr-text align-left mbr-fonts-style display-7">Over the years, we have pumped concrete with wide variety of mixes on various projects including mat pours, high rise buildings, highway bridges, power plants, and underwater footers.&nbsp;<br></p>
@@ -229,7 +201,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
