--- a/privacy.html
+++ b/privacy.html
@@ -168,6 +168,10 @@
             
         </div>
     </div>
+    <!-- ScheduleOnce widget START -->
+<div id="SOIWGT_NOLAConcretePumping" data-so-page="NOLAConcretePumping" data-wgt-style="ttl: BOOK NOW ONLINE; bg: #9D0C0C; clr: #ffffff; align: right;" data-height="580" data-tmp="17.40" data-pos="132" data-btn-style="ttl: Schedule Online; txt: Schedule Online; bg: #0E3D5A; clr: #ffffff;" data-phn-style="ttl: Call Us; phn1: +1-800-555-0199;" data-eml-style="ttl: Email Us; txt: Send; bg: #006DAF; clr: #ffffff" data-email="Danny Cruz(mj@msdigitalmexico.com)" data-message="Thank you for your message.<br ></div>We will get back to you as soon as we can." data-delay="1"></div>
+[JS_CODE_0]
+<!-- ScheduleOnce widget END -->
 </section>
 
 <section class="footer3 cid-s1rsySIc5t mbr-reveal" once="footers" id="footer03-y">
