create github pages

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 
                 <h1 class="mbr-section-title align-left mbr-bold pb-4 mbr-fonts-style display-1">NOLA<br>Concrete Pumping</h1>
 
-                <p class="mbr-text pb-4 align-left mbr-fonts-style display-5">
-                    NOLA Concrete Pumping provides customers with the most experienced operators in the industry and safe, well-maintained equipment. We are also proud of our long list of satisfied customers.</p>
+                <p class="mbr-text pb-4 align-left mbr-fonts-style display-5">NOLA Concrete Pumping provides customers with the most experienced operators in the concrete industry and safe, well-maintained pumping equipment.<br>We are proud of our long standing reputation as a reliable concrete company serving Louisiana.</p>
                 <div class="mbr-section-btn"><a class="btn btn-lg btn-info display-4" href="tel:+1-985-308-0141">CALL (985) 308-0141</a> <a class="btn btn-lg btn-primary display-4" href="https://go.oncehub.com/NOLAConcretePumping" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;BOOK NOW &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
             </div>
             <div class="col-lg-7">
@@ -84,8 +83,8 @@
 
             <div class="col-lg-6 md-pb m-auto">
                 <div class="content">
-                    <h1 class="mbr-section-title align-left mbr-bold mbr-white pb-4 mbr-fonts-style display-1">NOLA Concrete Pumping Rentals</h1>
-                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">• Lower hourly costs<div>• High speed placement capabilities</div><div>• Set up virtually anywhere</div><div>• Long distance capability</div><div>• Fast setup, moving and cleanup time</div><div>• Tough mix pumping ability – bridge decks to house slabs</div><div>• Access capability to restricted spaces.</div></h2>
+                    <h1 class="mbr-section-title align-left mbr-bold mbr-white pb-4 mbr-fonts-style display-1">NOLA Concrete Pumping&nbsp;</h1>
+                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">We provide you with the complete concrete pump solutions that feature:<br>• Lower hourly costs<div>• High speed concrete placement capabilities</div><div>• Set up virtually anywhere</div><div>• Long distance concrete pump capability</div><div>• Fast setup, moving and cleanup time</div><div>• Tough mix pumping ability – bridge decks to house slabs</div><div>• Access capability to restricted spaces</div></h2>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-info display-4" href="tel:+1-985-308-0141">CALL (985) 308-0141</a> <a class="btn btn-lg btn-primary display-4" href="https://go.oncehub.com/NOLAConcretePumping" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;BOOK NOW &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
                 </div>
             </div>
@@ -103,7 +102,7 @@
                         <div id="collapse1_1" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_1">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                    We offer truck mounted boom pumps in a variety of sizes to suit your placement needs. We offer booms from 20 to 40 meters in length, pump speeds from 0 to 300 cubic yards per hour and mix capabilities from wall mix to DOT bridge mixes.</p>
+                                    We offer truck mounted boom pumps in a variety of sizes to suit your concrete placement needs. We offer booms from 20 to 40 meters in length, pump speeds from 0 to 300 cubic yards per hour and concrete mix capabilities from wall mix to DOT bridge mixes.</p>
                             </div>
                         </div>
                     </div>
@@ -201,7 +200,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
