create github pages

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div id="collapse1_1" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_1">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                    We offer truck mounted boom pumps in a variety of sizes to suit your concrete placement needs. We offer booms from 20 to 40 meters in length, pump speeds from 0 to 300 cubic yards per hour and concrete mix capabilities from wall mix to DOT bridge mixes.</p>
+                                    We offer truck mounted boom pumps in a variety of sizes to suit your concrete placement needs. Our booms are from 65' to 131' (20 to 40 meters) in length, pump speeds from 0 to 300 cubic yards per hour and concrete mix capabilities from wall mix to DOT bridge mixes.</p>
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
